argocd/apps/open-webui/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: open-webui-app
  name: ollama-httproute
  namespace: open-webui
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-system
    sectionName: ollama
  hostnames:
  - ollama.yanello.net
  rules:
  - backendRefs:
    - name: open-webui-ollama
      namespace: open-webui
      port: 11434
      
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: open-webui-app
  name: open-webui-httproute
  namespace: open-webui
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-system
    sectionName: https
  hostnames:
  - chat.yanello.net
  rules:
  - backendRefs:
    - name: open-webui
      namespace: open-webui
      port: 80
      
    matches:
    - {}
