argocd/apps/open-webui/manifests/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: open-webui-vs
spec:
  hosts:
    - chat.yanello.net
  gateways:
    - istio-system/kube-gateway
  http:
    - route:
        - destination:
            host: open-webui
            port:
              number: 80
    - route:
        - match:
            port: 11434
          route:
            - destination:
                host: open-webui-ollama
                port:
                  number: 11434
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: open-webui-ollama-vs
# spec:
#   hosts:
#     - ollama.yanello.net
#   gateways:
#     - istio-system/kube-gateway
#   http:
#     - route:
#         - destination:
#             host: open-webui-ollama
#             port:
#               number: 11434
# ---
